<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:padding="10dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:text="@string/prefs_user_name" />
		<EditText android:id="@+id/prefs_user_name" android:text="marcus.schiesser"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:text="@string/prefs_pin" />
		<EditText android:id="@+id/prefs_pin" android:layout_width="fill_parent" android:inputType="textPassword"
			android:text="abc123"
			android:layout_height="wrap_content" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:text="@string/prefs_bahncard" />
		<Spinner android:id="@+id/prefs_bahncard"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:prompt="@string/prefs_bahncard_prompt" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:text="@string/prefs_class" />
		<RadioGroup android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<RadioButton android:id="@+id/prefs_firstclass"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/prefs_firstclass" />
			<RadioButton android:id="@+id/prefs_secondclass"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/prefs_secondclass" />
		</RadioGroup>

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:text="@string/prefs_seat" />
		<Spinner android:id="@+id/prefs_seat" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:prompt="@string/prefs_seat_prompt" />

		<Button android:id="@+id/prefs_ok" android:text="@string/prefs_ok" android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>
</ScrollView>
