<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="10dip">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/confirmation_message"
		android:textStyle="bold" />
	<TextView android:id="@+id/confirmation_connection"
		android:layout_marginTop="10dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView android:id="@+id/confirmation_day"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<TextView android:id="@+id/confirmation_bahncard"
		android:layout_marginTop="10dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView android:id="@+id/confirmation_seat"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<TextView android:id="@+id/confirmation_price"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<CheckBox android:id="@+id/confirmation_reserve_seat"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/confirmation_reserve_seat"
		android:layout_marginTop="10dip" />
	<FrameLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1">
	</FrameLayout>
	<Button android:id="@+id/confirmation_book" android:text="@string/confirmation_book"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center" />
</LinearLayout>
